# mridu-manda

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  weather.py
src/: weather.py
src/mridumanda_shvedt/: __main__.py  weather.py  weather_ascii.py
