[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mridumanda_shvedt"
dynamic = ["version"]
description = 'A minimal console based weather application.'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0"
keywords = []
authors = [
  { name = "Shvetank Dattatreya", email = "dshvetank@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "requests>=2.31.0",
]

[project.urls]
Documentation = "https://github.com/Shvetank Dattatreya/mridumanda#readme"
Issues = "https://github.com/Shvetank Dattatreya/mridumanda/issues"
Source = "https://github.com/Shvetank Dattatreya/mridumanda"

[project.scripts]
mrdmnd = "mridumanda_shvedt.__main__:main"

[tool.hatch.version]
path = "src/mridumanda_shvedt/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mridumanda tests}"

[tool.coverage.run]
source_pkgs = ["mridumanda", "tests"]
branch = true
parallel = true
omit = [
  "src/mridumanda/__about__.py",
]

[tool.coverage.paths]
mridumanda = ["src/mridumanda", "*/mridumanda/src/mridumanda"]
tests = ["tests", "*/mridumanda/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
